@@ -91,6 +91,9 @@ Version 1.3.1+svn:
      multiplayer (bug #8762)
    * Performance : wml compression is done in the helper threads instead of
      the main thread
+   * Added some protection against crashing when attacking with units with 
+     a high or negative amount of hitpoints (bug #6154, bug #7955, bug #8541) 
+     -1 hitpoints will still cause a crash.
 
 Version 1.3.1:
  * Campaignd
